--- a/_posts/2023-04-14-INMEDIA-初選47人案-趙家賢稱感被戴耀廷-騎劫-官質疑-除非你患斯德哥爾摩症候群.html
+++ b/_posts/2023-04-14-INMEDIA-初選47人案-趙家賢稱感被戴耀廷-騎劫-官質疑-除非你患斯德哥爾摩症候群.html
@@ -44,7 +44,7 @@ author: 獨媒報導
 <p>法官陳慶偉其後問趙有沒有其他想更改的字眼，趙指會刪除「立法會選舉雖被政權無理延遲一年，國安法已臨」、「對抗極權，支援運動」以及「團結民主力量，對抗專制極權」。法官李運騰問，撰寫信函的黎敬輝是否支持本土抗爭派的立場？趙稱在民主派光譜中，「佢睇得比我冇咁保守」。被問草擬本是否由黎自行撰寫，趙指他指示黎草擬，「佢自己草擬定係搵咗兼職草擬再比我，我就唔知道啦」，他亦不清楚黎現時身在何處。</p>
 <p><strong>官質疑民動工作報告無提被騎劫並感謝戴耀廷 趙稱「互送高帽」、壓抑真實感受</strong></p>
 <p>陳仲衡最後要求展示民主動力2018年11月至2020年12月的工作報告，提及2020年7月12日初選投票結束，戴耀廷、區諾軒和趙家賢於香港民意研究所外舉行記者會，「召集人趙家賢博士感謝超過60萬香港市民面對當權者有形無形的打壓，仍無懼走出來表達意見。同時，非常感謝民主動力秘書處團隊、兩位初選協調人、香港民意研究所、各區議員、黃店、站務人員及義工共同努力，排除萬難，成就香港民主歷史一頁。」</p>
-<p>陳仲衡指，這份報告非如感謝函般未經發布，而當中提及初選「成就香港民主歷史一頁」，問趙是否同意？趙指當時其助手應將他在記者會的發言綜合在報告。沈士文再問，「35+」是否香港民主歷史一頁？趙指民間投票有逾50萬人投票，是香港民主歷史的一頁，但亦指他當日仍未看到戴耀廷〈真攬炒十步〉一文。惟李運騰指，至報告撰寫的2020年12月，趙已曾讀過戴的文章，「但你有向執委會報告嗎？」，又指「你的組織被騎劫，這不是重要的事嗎？而你沒有向執委會報告？」，鄒家成和林卓廷微笑。趙指，工作報告是按時間撰寫，職員只是按當時紀錄整理。</p>
+<p>陳仲衡指，這份報告非如感謝函般未經發布，而當中提及初選「成就香港民主歷史一頁」，問趙是否同意？趙指當時其助手應將他在記者會的發言綜合在報告。沈士文再問，「35+」是否香港民主歷史一頁？趙指民間投票有逾50萬人投票，是香港民主歷史的一頁，但亦指他當日仍未看到戴耀廷〈真攬炒十步〉一文。惟李運騰指，至報告撰寫的2020年12月，趙已曾讀過戴的文章，並問「報告哪裡提到被騎劫？你的組織被騎劫，這不是重要的事嗎？而你沒有向執委會報告？」，鄒家成和林卓廷微笑。趙指，工作報告是按時間撰寫，職員只是按當時紀錄整理。</p>
 <p>李運騰續問，故趙的助手沒有感覺他被騎劫？趙否認，解釋工作報告大部分都是態度正面。陳慶偉續問，第一段提及「非常感謝...兩位初選協調人」，並笑着說，「你一直指責戴耀廷作為『大文豪』、『大思想家』，而你又多謝他（“All along you condemned benny tai as a great writer, as great philosopher, and you thanked him.”）」，林卓廷、鄒家成和吳政亨發笑。</p>
 <p>趙續回應：「喺當時嘅情況下，大家有咁多人出嚟投票，整個社會氣氛係雄心壯志嘅」，陳慶偉指他不關注市民，而是問戴耀廷。趙續重申，當晚見到有很多人投票，「各個記者都問啲好正向嘅訊息，咁與會嘅發言者都會向大家互送高帽」，林卓廷和鄒家成再發笑。李運騰問，故因此避免冒犯投票者，趙家賢就隱瞞（conceal）了他對戴的真實感受？趙答：「唔係隱瞞，係壓抑」，被告和旁聽席即傳來大笑聲，在延伸庭的黃之鋒亦笑到抬起頭。</p>
 <p>趙其後同意，戴耀廷有關攬炒的文章「絕對唔係」以「35+」的名義發布，而民主動力發布的初選廣告，亦只是籲選民投票，同意不理否決財案，初選有逾50萬人投票本身已是「公民社會嘅歷史一頁」。</p>
