Update VOCUS 2023-04-16 patch

--- a/_posts/2023-04-13-VOCUS-short-與-短-不冗-矮-不厂-縮-淺-差-烈-縮簡-捷道-速通-短路-電跳-突然-效特-空頭-中斷-等的橋接.html
+++ b/_posts/2023-04-13-VOCUS-short-與-短-不冗-矮-不厂-縮-淺-差-烈-縮簡-捷道-速通-短路-電跳-突然-效特-空頭-中斷-等的橋接.html
@@ -159,10 +159,8 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">short =&nbsp;失h偶二道&nbsp;=&nbsp;失hh二道&nbsp;=&nbsp;失have人二道&nbsp;=&nbsp;失有亻二道&nbsp;=&nbsp;失有仁道</span>，類似「有失仁道」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">short =&nbsp;失have.oct.round道&nbsp;=&nbsp;失有八圓道&nbsp;=&nbsp;失有八〇道&nbsp;=&nbsp;失有八口道&nbsp;=&nbsp;失有㕣道&nbsp;=&nbsp;失有公道</span>，類似「有失公道」。其中的漢字「㕣」是漢字「公」的早期字體。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">short =&nbsp;失have.one人道&nbsp;=&nbsp;失有一人道&nbsp;=&nbsp;失有大道</span>，類似「有失大道」。此處「大道」可能和古漢字文化的教育家兼思想家「孔子」(孔丘、Confucius，公元前&nbsp;551&nbsp;年&nbsp;~&nbsp;公元前&nbsp;479&nbsp;年)&nbsp;在《禮運大同篇》裡所說的「大道」相關，也是他所謂的「仁道」(republicanism；共和之道)&nbsp;之升級版，也許就是「democracy之道」(天下爲公之道；大同界世之道，意通「大同世界之道」；民權理治之道)&nbsp;也說不定。亦即，孔子所謂的「大同」(意通「大通」)&nbsp;可能不是一個急功好利、短視近利、如立竿見影般可以立即形成的理想社會，而是與公民通識教育密切相關的長遠目標&nbsp;--&nbsp;一個民主自由的世界，而其中的「自由」似乎也含概著經由社會保險制度所營造出來的「財務自由」之概念。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">short&nbsp;一字多作形容詞、附加形容詞或副詞、名詞使用；但也可能作爲動詞使用，尤其是用在關於「縮短」或「短路」之類的意思。亦即，在作爲形容詞時，short&nbsp;的字尾&nbsp;t&nbsp;也可能同時約略形聲漢語「的」，但本來就有轉換到漢字「的」的時候例外；在作爲附加形容詞或副詞時，字尾&nbsp;t&nbsp;也可能同時約略形聲漢語「地」，或是將形容詞語意的「的」改成「地」；在作爲名詞的指稱詞時，字尾&nbsp;t&nbsp;也可能同時代表漢字「者」(<span style="font-weight: bold; ">t = the =&nbsp;者</span>)&nbsp;或「人」(<span style="font-weight: bold; ">t = T =&nbsp;亻=&nbsp;人</span>)&nbsp;等。</div>
 <div class="draft-block draft--p left">如果拿&nbsp;short&nbsp;一字和&nbsp;long&nbsp;作比較，可能會有點望洋興嘆的感覺：short&nbsp;含概的漢字語義真是多樣啊！……&nbsp;沒錯！或許正是因爲&nbsp;short&nbsp;也有「精簡」、「縮厚」(意通「濃縮」)&nbsp;的意思，這也導致它實際上可能帶有很豐富的字義，而上述列出的字義，也可能僅僅是筆者目前可以寫出橋接式的一些字義而已。<span style="font-weight: bold; ">(P.S.&nbsp;參考：〈long&nbsp;與「冗；冗之；冗嘅；冗的；長；長之；長嘅；長的；久；久之；久嘅；久的；遠；遠之；遠嘅；遠的；恆；恆久；冗長；冗久；長久；久長；镹；冗期；冗時間；冗距；長距；遠距；冗長距；冗遠距；離大距；冗遠；長遠；久遠；镹遠；渴求；渴久；渴飢；渴；望；渴望；熱切；乞求；追求；盼；渴望；盼望；望厚；盼厚；望寄；盼寄；企盼；期望；期盼；待期；冗盼；久盼；久追；遠追；遠求」等的橋接〉--&nbsp;</span><a href="https://vocus.cc/article/63f804befd8978000142c03b" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/article/63f804befd8978000142c03b</span></a><span style="font-weight: bold; ">)</span></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-9180a"><span style="font-weight: bold; ">P.S.1.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">shorts：short單三現；short數複；short雙；short些；short众；short眾；short群；短扮；短打扮；短飾</span>，類似「短裝」<span style="font-weight: bold; ">；短服飾</span>，類似「短服裝」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">shorted：short的；short之；short樣的；short已的；short矣的；short有的；short已有的；short已動；short已做；short矣動；short矣做；short完動；short完做；short了；short完了；short爲的；short爲動；short爲做。</span></div>
@@ -181,7 +179,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">shorthanded：少短人手的；缺短人手之</span>。意通「人手短缺的」、「人員不足的」，其中&nbsp;-hand-&nbsp;的&nbsp;h&nbsp;可能同時約略象徵漢字「人」的早期象形文字體。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">short talks：淺的談話；淺談；淺說講述；縮短話眾、縮短話多</span>，此時類似「長話短說」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">shorta (Arabic&nbsp;語系&nbsp;Roman&nbsp;拼音單字)：警；察；警察；民人公僕；包公探；包公探案</span>。此字與前述short&nbsp;系列單字無關，除非是說同時置入了&nbsp;English&nbsp;之「衝突地(區)」之類的言外之意。<span style="font-weight: bold; ">(P.S.&nbsp;參考：〈shorta (Arabic&nbsp;語系&nbsp;Roman&nbsp;拼音單字)&nbsp;與「警；察；警察；民人公僕；包公探；包公探案」等的轉換密碼〉--&nbsp;</span><a href="https://vocus.cc/article/61b92384fd89780001bd7913" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/article/61b92384fd89780001bd7913</span></a><span style="font-weight: bold; ">)</span></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-6cbhl"><span style="font-weight: bold; ">P.S.2.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">English：dwarf --&nbsp;短與矮容形</span>，意指「短與矮的形容詞」，此時&nbsp;d&nbsp;約略形聲漢語「短」的起音，w&nbsp;代表with&nbsp;而轉換漢字「與」，a&nbsp;約略形聲台閩語「矮」的發音&nbsp;èh，r&nbsp;約略形聲漢語「容」的起音再轉音，字尾f&nbsp;則可能有&nbsp;form (形)&nbsp;之意<span style="font-weight: bold; ">；短矮容形；短容形；矮容形；小容形</span>，此時 <span style="font-weight: bold; ">dwa- =&nbsp;點雙1 =&nbsp;㇀丶亅=&nbsp;小；短小容形；矮小容形。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Old English：sceort --&nbsp;矮的；短的；小的。</span>此處&nbsp;c&nbsp;可能約略形聲漢語「弓」的起音且約略象徵彎曲形的弓形以特別強調前面&nbsp;s&nbsp;是約略形聲「弓矢」的「矢」之起音，e&nbsp;則通過大寫&nbsp;E&nbsp;逆時針轉&nbsp;90&nbsp;度象徵禾草形以強調後面的&nbsp;o&nbsp;是約略形聲漢語「禾」。</div>
@@ -195,10 +192,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Lithuanian：skurstu --&nbsp;矮短樣；受箍攔堵樣。</span>但&nbsp;skardus&nbsp;則有「(形)勢高厂的樣子」之意。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Middle Irish：corr --&nbsp;阻攔。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Old Irish：cert --&nbsp;矮的；短的；小樣的。</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/rqQHa2HcGtM"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/rqQHa2HcGtM"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/rqQHa2HcGtM" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/rqQHa2HcGtM</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Taylor Swift - long story short (Official Lyric Video) /&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
