--- a/_posts/2023-04-13-VOCUS-北將七-記憶詮釋住了誰.html
+++ b/_posts/2023-04-13-VOCUS-北將七-記憶詮釋住了誰.html
@@ -46,4 +46,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">而這種隨性感或是人文風情的純粹感，我覺得是一些評審和文人所喜愛的風格，以一個創作者來說能了解這種隨意創作的趣味與不能預期性。但如果是以一個觀影人的話，我很想放一倍、兩倍快轉，甚至希望有遙控器只在重點部分停下來。</div>
 <div class="draft-block draft--p left">我找尋到這部電影最大的優點就是即便上廁所回來影廳也可以立刻融入電影，不怕錯過某些片段，這對觀眾來講很親切。</div>
 <div class="draft-block draft--p left">雖然從大綱、幕後訪談、與影評人解析中，可以明白《北將七》電影一些含義，還有對於台南當地的人，這部紀錄片會勾起一些回憶和故事，這也是為何每個人的時間決定當地的畫面。但就實際層面這部電影非常的地區與私人化，你蒐集了地圖上每一次的風和日麗、你留戀電影裡美麗的不真實的場景，勉強說出，就是這部電影的意義。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/D8X1-E20f-M"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/D8X1-E20f-M"></iframe></div>
