--- a/_posts/2023-04-14-VOCUS-air-一雙經典籃球鞋的誕生.html
+++ b/_posts/2023-04-14-VOCUS-air-一雙經典籃球鞋的誕生.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">如果以我一個雖然知道籃球、也知道麥克喬丹的經典，但卻沒有太過關注的普通觀眾來說，《AIR》的復古風情的確很有意思，如果不刻意去院線在電視台撥出的話，真的會讓人誤會是哪一部經典老片。</div>
 <div class="draft-block draft--p left">但也如同一些不喜歡這部片的觀眾所說的，這電影少了很多不可預期的期待感，喬丹鞋爆紅程度應該是就連不看籃球的人都知道，故這也讓裡面的故事少了緊張感，而到電影後半部甚至平鋪到如同變成了電視劇的水準。</div>
 <div class="draft-block draft--p left">如果你曾經是籃球迷，甚至到現在還熱愛打籃球對與80年代的籃球名人，略知一二的話，這部《AIR》會讓你直得上院線，雖然故事和主角的真實性都有所爭議，但這部電影主打懷舊與球鞋粉絲向的作品，且製作也算有一定水準，是一部熟知籃球的觀眾會看了很開心的作品。但對於一般來觀眾來說，可能就沒有如今電影的快節奏與少了那緊張刺激營造的氣氛，然後讓你知道的adidas的小秘密。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/OHSWHMbch_g"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/OHSWHMbch_g"></iframe></div>
