--- a/_posts/2021-09-25-VOCUS-法律文-續.html
+++ b/_posts/2021-09-25-VOCUS-法律文-續.html
@@ -8,7 +8,7 @@ tags: blog
 author: Fornik Tsai
 ---
 
-<div class="draft--imgFull"><div><img style="height:3752px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1576015655841-ef5fdc1a7060?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDY5fHxsYXd8ZW58MHx8fHwxNjMyNTc2MDkw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="3752" data-height="5524" data-unsplash="[object Object]" data-position="full" src="https://images.unsplash.com/photo-1576015655841-ef5fdc1a7060" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Gabriel Ramos on Unsplash</figcaption></div></div>
+<div class="draft--imgFull"><div><img data-src="https://images.unsplash.com/photo-1576015655841-ef5fdc1a7060?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDY5fHxsYXd8ZW58MHx8fHwxNjMyNTc2MDkw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="3752" data-height="5524" data-unsplash="[object Object]" data-position="full" src="https://images.unsplash.com/photo-1576015655841-ef5fdc1a7060" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Gabriel Ramos on Unsplash</figcaption></div></div>
 <div class="draft-block draft--p left">看著美國憲法修正案有著二十七條核准之後，讓我想到憲法本身的建立以及後來促進的人權價值。自從同性戀在美國結婚合法之後，並不代表同性戀的權利受到完整保障——我當然是指社會本身。然而，就因為如此，美國國土何其大，大到其實小地方很難完全報導之後，這我又是只在森林或是小鎮本身的某一個角落。</div>
 <div class="draft-block draft--p left">大可以很大，小當然可以很小，這其中存在著歧見本身，對我來說，對每一個人來說，似乎就是距離感的問題，從高樓看地面就很遠，同樣相反過來，從地面望向高樓的樓頂就很遙遠，因此這存在著宛如世界上常有的問題：相對下的一邊。</div>
 <div class="draft-block draft--p left">我們似乎就站在一邊，而不是兩邊，保守派要相對看到自由派的論點，除非真的「願意」，否則沒什麼好說的，相反過來也一樣，富裕的定義似乎由金錢所取代，用資本主義的論點，還是什麼之類的觀點去著重富裕的那種定義是什麼，窮人呢？依舊貧窮，甚至窮得只剩下錢（看你用什麼定義論述）。</div>
@@ -16,22 +16,14 @@ author: Fornik Tsai
 <div class="draft-block draft--p left">憲法的本身，或是法律的本身，該用什麼法律——就像大部分的民法與刑法一樣，是行為人在道德上的懲戒與約束，例如舉最簡單的例子就是交通，如果沒有交通規則，現代人大概不知道什麼叫做紅燈停，綠燈行，即使有這樣的約束力，仍有人認為「關我屁事」，大搖大擺闖了出去，負責此類的管理者叫做警察，警察有權利告發，處罰你違反規則，這基本上就是法律上的作用。用在民事方面，就是管你在行為能力上的一種約束，例如婚姻與金錢上的糾紛，加上了自由的管控。刑法？就是道德責任。然而，不管這三者，還是其他法律而言，就是限制一部分人或是團體的行為能力，不能過度背信、貪污還有誹謗，當然還有很多。</div>
 <div class="draft-block draft--p left">我不是法律人，但看到行為能力者，不免想到心理學的相關研究，因此，想想行為能力者本身，或是我們行為本身，似乎都是人類行為——也就是著重於行為的管控與約束。不過，由法律來看行為，或是由心理學來看行為，也著重於解釋的那個部分。</div>
 <div class="draft-block draft--p left">例如金錢糾紛，該用什麼原因判決被告是真的有罪，還是因為什麼有罪，法官是看證據，檢察官是看這其中案件有什麼需要呈上證據的地方，給法官看。法官是根據案件內容來判決，然而，金錢糾紛或許很「容易」在解決良心沒那麼不安的部分——相對於刑法部分。刑法在兇殺以及車禍之類的刑事案件，受到道德譴責而有更多的爭議，就像死刑這一個區域，廢死？該或不該，廢除了死刑之後，社會當然不見得不會好轉，但也不見得會走向好轉。所以，該用樂觀或是悲觀的某一角度在取決於死刑——或是刑法本身上的罪行——幾乎跟你的道德有很深的連結。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgFull"><div><img style="height:4032px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1518655061710-5ccf392c275a?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fG1vcmFsfGVufDB8fHx8MTYzMjU3NjMyOQ&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="4032" data-height="3024" data-unsplash="[object Object]" data-position="full" src="https://images.unsplash.com/photo-1518655061710-5ccf392c275a" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">OpticalNomad null on Unsplash</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgFull"><div><img data-src="https://images.unsplash.com/photo-1518655061710-5ccf392c275a?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fG1vcmFsfGVufDB8fHx8MTYzMjU3NjMyOQ&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="4032" data-height="3024" data-unsplash="[object Object]" data-position="full" src="https://images.unsplash.com/photo-1518655061710-5ccf392c275a" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">OpticalNomad null on Unsplash</figcaption></div></div>
 <div class="draft-block draft--p left">講到道德，當然是用很嚴肅的口吻去形容道德本身的那種狹義界線在哪裏，常知道的道德，我們都知道，沒有經過他人同意前，是不能隨意拿起他人物品，但這種基本道德已經被打破了！坦白說，就算別人同意，他（她）不在現場，也要經過對方的同意才行，想到這點，你是不是覺得很麻煩？因此，所以沒有人可以經過你同意就拿走你辦公桌上的一支筆或是一把剪刀，只因為你臨時需要用筆，而你的筆剛好斷水，唯一的筆，唯一要用到筆的墨水只有對方有，怎麼辦？借一下就好，這就是基本的道德。</div>
 <div class="draft-block draft--p left">第二個就是很隨意，照理說，道德的規範是說——通用上面的規則就是不能隨意使用未經授權的插座與任何物品，這也同樣的，我們還是會用。我們把道德的規範拉得很開的一個原因就是每一個人都是這樣用，己所不欲，勿施於人的某一個狹義規範要套用在一群堅持道德守則的人幾乎少之又少，因此我們再來想想行為人本身的道德是怎麼回事？</div>
 <div class="draft-block draft--p left">行為人的定義基本上就是需要為自己的行為負責，所說的話負責，這部分是由錄音與錄影給法官看的證據，證實你當時因為氣炸了才侮辱人，罵人不雅字眼，給人套用什麼粗俗名詞，是你情緒上的爆發，你需要為此負責。而說到情緒，人類把情緒看得比理性還要重要，因此，情緒上的好與不好屬於當時，理性思考之後，我們真的沒有想到「說者無心，聽者有意」這樣的說法。</div>
 <div class="draft-block draft--p left">侵佔罪是一個常常引用的例子，你不當獲取他人物品，佔為己有，不歸還他人——屬於貪婪的部分，而貪婪就是罪惡的中心，有人貪錢，有人貪物，也有人貪不是屬於自己物品的物品。因此，道德能做到的就是上述的某一個行為準則，是你的「應該」就是你用換來的，金錢或是物品，但這個應該需要省思一下。</div>
 <div class="draft-block draft--p left">什麼是應該？社會人的行為本身是需要靠著自己的努力而來得到的行為準則，所以應該相互尊重與相互思考我們行為的最常合理化本身。泛意義中的那種意義，容易去套用該此意義的基準線，所以排隊本身的意義是去勝過一個拿著一盒雞蛋的老年人突然給你插隊，你應該不會生氣，這樣說，應該沒違背你的良心準則吧？</div>
 <div class="draft-block draft--p left">但有人「應該」為此用道德嚴肅之類的準則去看待行為人本身，如果行為人皆套用大眾本身，你「應該」不會介意小小的行為放寬，或是在行為本身的道德嚴肅中，堅持你的行為是一體通用。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">鳥類世界若是有法律，殺了鳥類應該不是重罪，我當然是指鳥兒彼此吃其他鳥兒，然而，行為人在法律界定，是用法律來看待，人類行為呢？道德本身是關鍵。</div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">因此，平等在此的說法當然有狹義的解釋，社會本身的平等，是需要用什麼行為本身去平等該有的行為價值，以及那層意義上的道德責任？因此，合理行為本身是看行為上的一種合理，而這種合理很容易變成泛合理上的一種意義，所以這是泛意義的行為變則。</div>
 <div class="draft-block draft--p left">讓我們想想行為或是人類行為上的某一層有趣的思考，行為應該是泛指所有物種本身行為思考的一種通俗說法，在這裡很容易變成人類所聯想。用鳥類行為，是鳥類在行為本身長年下來得到的觀察結果，例如會唱歌來求偶的鳥兒們，例如那堅貞的信天翁的愛情，一起行動鳥兒飛翔等等，我們都知道大部分行為鳥兒行為的真正目的——用鳥類學家的觀察給我們答案說道，但是放在人類本身，或是我們行為本身的那種思考，我們似乎只是在行為上的某種約束人？</div>
 <div class="draft-block draft--p left">鳥類世界若是有法律，殺了鳥類應該不是重罪，我當然是指鳥兒彼此吃其他鳥兒，然而，行為人在法律界定，是用法律來看待，人類行為呢？道德本身是關鍵，約束你行為的某一種自由，或許是為了自由本身而設想，因為自由下的一種自由，並不是全自由，道德依舊在刑法之前，但我們在行為之後——受到了情緒，難免都有道德失守的時候——所以法律只是某種離你身邊很遠的刺——端看你距離的遠近。</div>
@@ -41,4 +33,3 @@ author: Fornik Tsai
 <div class="draft-block draft--p left">憲法修正案下的我們，或許是保障修正後的世代符合人權價值所應證，但坦白說，政治仍默默輕輕畫上幾痕，就像你身上的傷口，你看得見的最清楚與不清楚的往往可能是你的內，而非外，或是雙重影響。</div>
 <div class="draft-block draft--p left">外交政策解決，最後都演變成政治戰局，這個「戰」當然是指口水戰，其次就是軍備競賽，因為告訴全世界，你們不要惹我，我可是強大的軍事裝備，隨時還擊。秀出軍事肌肉的目的性當然就是在一個沒有那麼和平或統一的那種大同世界中，有人仍難完全卸下乖乖牌的稱號。</div>
 <div class="draft-block draft--p left">道德——應該說是泛道德，也比較恰當。</div>
-<div class="draft-block draft--p left"></div>
