--- a/_posts/2023-04-14-PQ-福島排放核處理廢水-韓國在野黨議員組團赴日抗議-遭執政黨批反日作秀-損國格.html
+++ b/_posts/2023-04-14-PQ-福島排放核處理廢水-韓國在野黨議員組團赴日抗議-遭執政黨批反日作秀-損國格.html
@@ -8,15 +8,19 @@ tags: blog
 author: 陳怡菱
 ---
 
-<p>韓國最大在野黨共同民主黨的「福島核電污染水對策團」的 4 位國會議員於 6～8 日訪問了日本，表達反對東京電力公司將福島第一核電廠的處理廢水排放到海洋的立場，意在透過此行製造出尹錫悅政府以改善日韓關係為優先，而未充分應對處理廢水排放問題的印象。</p>
+<p>韓國最大在野黨「共同民主黨」的「福島核電污染水對策團」的 4 位國會議員成員於 6～8 日訪問了日本，表達反對東京電力公司將福島第一核電廠的處理廢水排放到海洋的立場，意在透過此行製造出尹錫悅政府以改善日韓關係為優先，而未充分應對處理廢水排放問題的印象。</p>
 
 
 
-<p>另外，透過韓國當局的調查發現，北韓情報機關吸收韓國最大工會的幹部作為間諜，指示他們利用福島第一核電廠事故煽動韓國反日情緒，迫使日韓兩國陷入嚴峻對立。背後原因是北韓已故的前國家主席金日成在半個世紀前提出的日韓離間策略，直到現在北韓情報機關的策略仍然撼動著韓國社會。</p>
+<p>關於為什麼日本要排放處理廢水：<br><a href="https://www.pourquoi.tw/intlnews-neasia-210409-210415-04/" target="_blank" rel="noopener">以排放標準值再稀釋40分之1　日本決定將福島核電的氚廢水排放到海洋</a></p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/6061a8c6-15caf817-37dc-40e9-87b1-36e5f9121c30.jpeg" alt="" class="wp-image-132815"/><figcaption>為抗議日本計畫將含氚核廢水排放到海洋，共同民主黨「福島核電污染水對策團」的4位國會議員在4月6日訪日。<br>（圖／韓聯社／中央社）</figcaption></figure></div>
+<p>另一方面，透過韓國當局的調查發現，北韓情報機關吸收韓國最大工會的幹部作為間諜，指示他們利用日本福島第一核電廠事故煽動韓國反日情緒，迫使日韓兩國陷入嚴峻對立。背後原因是北韓已故的前國家主席金日成在半個世紀前提出的日韓離間策略，直到現在北韓情報機關的策略仍然撼動著韓國社會。</p>
+
+
+
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/6061a8c6-15caf817-37dc-40e9-87b1-36e5f9121c30.jpeg" alt="" class="wp-image-132815"/><figcaption>為抗議日本計畫將含氚核廢水排放到海洋，共同民主黨「福島核電污染水對策團」的4位國會議員在4月6日訪日。<br>（圖／韓聯社／中央社）</figcaption></figure></div>
 
 
 
@@ -24,15 +28,15 @@ author: 陳怡菱
 
 
 
-<p>據韓國媒體報導，韓國共同民主黨的 4 位國會議員在 7 日與同樣批評日本政府政策的福島縣當地市議員進行了意見交流。他們在前一天的 6 日訪問了東京電力公司位於東京的總部，但遭到該公司相關人員拒絕會面，於是只向該公司員工遞交了書面請求。除了無法到福島第一核電廠內進行現場視察之外，他們也被日韓議員聯盟拒絕會面，而當初原訂與韓國媒體東京特派員的懇談會也突然停辦，使得他們在韓國也遭受到了許多質疑。</p>
+<p>據韓國媒體報導，韓國共同民主黨的 4 位國會議員在 7 日與同樣批評日本政府政策的福島縣當地市議員進行了意見交流。4 位韓國議員在前一天的 6 日訪問了東京電力公司位於東京的總部，但遭到該公司相關人員拒絕會面，於是只向該公司員工遞交了書面請求。除了無法實際進入福島第一核電廠視察之外，他們也被日韓議員聯盟拒絕會面，而當初原訂與韓國媒體東京特派員的懇談會也突然停辦，使得他們此行在韓國也遭受到了許多質疑。</p>
 
 
 
-<p class="pqnote"><strong>日韓議員聯盟</strong><br>日本國會中由自民黨主導的跨黨派議員聯盟。前身為 1972 年冷戰時期，應美國要求而成立的日韓議員懇親會，1975 年改成現在的名稱。冷戰時期積極與韓國國會議員交流，促進兩國友好關係作為西方民主陣營的一份子共同對抗共產國家。</p>
+<p class="pqnote"><strong>日韓議員聯盟</strong><br>日本國會中由自民黨主導的跨黨派議員聯盟。前身為 1972 年冷戰時期，應美國要求而成立的「日韓議員懇親會」，1975 年改成現在的名稱。冷戰時期積極與韓國國會議員交流，促進兩國友好關係以作為西方民主陣營的一份子共同對抗共產國家。</p>
 
 
 
-<p>在訪日之前的 4 月 5 日，議員團到訪位於首爾的日本大使館與經濟公使浪岡大介會面，要求「日本政府不得在沒有韓國政府驗證與同意的狀況下將污染水排放到海洋」，對此浪岡回應表示「我們已向韓國政府提出充分的資料，（需要的資料）透過韓國政府提出要求我們就會提供。」</p>
+<p>在訪日之前的 4 月 5 日，議員團到訪位於首爾的日本大使館與經濟公使浪岡大介會面，要求「日本政府不得在沒有韓國政府驗證與同意的狀況下將污染水排放到海洋」，對此浪岡回應表示「我們已向韓國政府提出充分的資料，（有需要的資料）透過韓國政府提出要求我們就會提供。」</p>
 
 
 
@@ -40,7 +44,7 @@ author: 陳怡菱
 
 
 
-<p>執政黨「國民力量」的國會代表朱豪英 4 月 6 日指出這是「反日作秀」，並批評這樣的行為損害了韓國的「國家利益和國格」。</p>
+<p>韓國執政黨「國民力量」的國會代表朱豪英 4 月 6 日指出這是「反日作秀」，並批評這樣的行為損害了韓國的「國家利益和國格」。</p>
 
 
 
