--- a/_posts/2023-04-15-INMEDIA-專訪-左閘變身低組別神射手-最被低估的前港超球員-許宏鋒.html
+++ b/_posts/2023-04-15-INMEDIA-專訪-左閘變身低組別神射手-最被低估的前港超球員-許宏鋒.html
@@ -26,15 +26,15 @@ author: 獨媒報導
 <p>誰是金主誰話事，球圈一向如此。許宏鋒很早已明白何謂老細足球。離開元朗，趙俊傑介紹許宏鋒加入港甲公民，那是阿鋒首次踢非職業賽事，陳浩然希望來季能再簽入許宏鋒。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/U02B2yHot3" title="DSC_0301"><img src="https://live.staticflickr.com/65535/52787606765_96d949978c_b.jpg" width="1024" alt="DSC_0301" /></a></p>
 <p><strong>曾任地產經紀  去年始上手足球教練</strong></p>
-<p>球圈現時有不少球員任職保險經紀，許宏鋒則做過地產代理。在踢港甲那半年，隊友趙俊傑介紹了一名球迷予許宏鋒認識，對方「好睇佢」，帶他去西九四小龍做地產經紀。阿鋒早上到元朗跟操，中午就做地產代理，搵多一份糧。他差點便做成一宗1,400萬元的賣盤，但最後臨門一腳未能成交。</p>
+<p>球圈現時有不少球員任職保險經紀，許宏鋒則做過地產代理。那是2014年的事，在踢港甲那半年，隊友趙俊傑介紹了一名球迷予許宏鋒認識，對方「好睇佢」，帶他去西九四小龍做地產經紀。阿鋒早上到元朗跟操，中午就做地產代理，搵多一份糧。他差點便做成一宗1,400萬元的賣盤，但最後臨門一腳未能成交。</p>
 <p>阿鋒又感謝趙俊傑邀請自己教波，教練工作至去年年初才較為上手，「原本無咩興趣，教吓教吓見到啲好嘅小朋友，先多啲動力。」</p>
 <p><strong>南華邀試腳  即獲公民安排美國試訓</strong></p>
 <p>在公民待了半季，21歲的許宏鋒，獲班霸南華邀請試腳，班主兼「油王」張廣勇向他開出合約。不過，公民突然推薦阿鋒到美國足球聯賽球隊勞德代爾堡前鋒試訓，「後生仔有呢啲機會好正，可以去外國試下點都係好嘅，去南華可能只係坐半年。」</p>
-<p>阿鋒到美國試腳，獲本港多份報章廣泛報道。瘦田冇人耕，耕開有人爭，從美國返港後，數支港超聯球隊相繼聯絡許宏鋒。在美國邁阿密的一個月，每日練兩課，許宏鋒一心一意踢足球，更在友誼賽取得入球。但奈何球隊外援名額已滿，更要留一個位置予班主朗拿度，阿鋒未能留在美國，教練希望他能「留效」等候機會，但當時港隊23歲以下代表隊有比賽，便決定回港。</p>
+<p>阿鋒在2015年到美國試腳，獲本港多份報章廣泛報道。瘦田冇人耕，耕開有人爭，從美國返港後，數支港超聯球隊相繼聯絡許宏鋒。在美國邁阿密的一個月，每日練兩課，許宏鋒一心一意踢足球，更在友誼賽取得入球。但奈何球隊外援名額已滿，更要留一個位置予班主朗拿度，阿鋒未能留在美國，教練希望他能「留效」等候機會，但當時港隊23歲以下代表隊有比賽，便決定回港。</p>
 <p>「你問我宜家再去，我都唔係好夠薑，始終個陣後生，越大越多顧忌。」這次美國之旅，阿鋒笑言最開心是見識了何謂大屋。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/37L8926552" title="無標題"><img src="https://live.staticflickr.com/65535/51159216603_a0e0b22cae_b.jpg" alt="無標題" /></a></p>
 <p><strong>讚鄭兆聰是有料嚴帥</strong></p>
-<p>流浪，是許宏鋒的最後歸宿。回港後獲教練羅國豪第四度招手，終於重返流浪，阿鋒位置是左翼，不過就只留了一年。鄭兆聰翌年再次邀請許宏鋒加盟南區，他點頭答應，結果一踢便五年多接近六年，不過就再被推後一格成為左閘。</p>
+<p>流浪，是許宏鋒的最後歸宿。回港後獲教練羅國豪第四度招手，終於重返流浪，阿鋒位置是左翼，不過就只留了一年。鄭兆聰在2016年再次邀請許宏鋒加盟南區，他點頭答應，結果一踢便五年多接近六年，不過就再次被推後一格成為左閘。</p>
 <p>直至加盟南區，許宏鋒才練好基本功，「其實一直都係雜牌軍，踢天才波、街波。射門唔準，回波又唔好。」數年下來，許宏鋒在球迷眼中，就是默默耕耘的那位「南區左閘」。許宏鋒讚鄭兆聰是有料的嚴帥，對本地球員尤其有要求，「佢唔鬧外援，因為外援踢得唔好，出年一定無約，所以華人一定要做得好。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5n392p2F66" title="DSC_5274"><img src="https://live.staticflickr.com/65535/52123643208_c3b45a4bc2_b.jpg" width="1024" alt="DSC_5274" /></a></p>
 <p>2021年離開南區，除了與疫情有關，亦和球市不景有關。許宏鋒大概想過一百種告別職業足球的方式，沒想過最終如此：「因為疫情，好多球隊都減少咗資源，變相市面有好多球員流出，喺求大過供嘅情況下，好容易被淘汰。」</p>
