--- a/_posts/2023-04-16-INITIUM-从-香港之光-到-港女-首个香港av女优出道-被任意门的身分政治.html
+++ b/_posts/2023-04-16-INITIUM-从-香港之光-到-港女-首个香港av女优出道-被任意门的身分政治.html
@@ -5,10 +5,10 @@ date: 2023-04-16 22:54:00.000000000 +00:00
 link: https://theinitium.com/article/20230417-her-country-av-actress-hk/
 categories: initium
 tags: blog
-author: 
+author: 孙小椒
 ---
 
-<p>「“我们终于有一个香港女优了！”当人们庆祝这件事的时候，是在庆祝什么？」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230417-her-country-av-actress-hk/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/5d62ff761d3b453fb0e51752d1096f71.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="香港AV女优素海霖（绘丽奈）。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「“我们终于有一个香港女优了！”当人们庆祝这件事的时候，是在庆祝什么？」</p><p>孙小椒</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230417-her-country-av-actress-hk/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/5d62ff761d3b453fb0e51752d1096f71.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="香港AV女优素海霖（绘丽奈）。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">香港AV女优素海霖（绘丽奈）。<span class="credit">图：影片截图</span></figcaption></figure><p><small>【编按】：<a href="https://theinitium.com/channel/her-country/">“女人没有国家？”</a>是端传媒新开设的专栏，名字源于伍尔芙的一句话“As a woman I have no country”，但我们保留了一个问号，希望能从问号出发，与你探讨女性和国家的关系，聆听离散中的女性故事和女性经验。我是这个栏目的编辑符雨欣。</small></p>
 <p><small>本期文章，我们讨论，展现在香港AV女优素海霖（绘丽奈）身上，关于香港本土认同与男性凝视的双重矛盾。我们不臆测素海霖本身进入性产业的自主性，而著眼于男性评价的变化。民族主义的、香港自主的论述，如何被使用在对素海霖的女性认同中；这种认同又如何随著影片的呈现，而回落至对她的羞辱。“香港”这种政治想像，如何被挪用、修改、狂欢于对好女人与坏女人的分野中？</small></p>
 <p><small><strong>（孙小椒，资深媒体人、评论人、女权主义者）</strong></small></p>
