--- a/_posts/2023-04-16-INMEDIA-港超聯-流浪贏港會-林衍廷首奪最佳球員-用表現爭取入選港隊.html
+++ b/_posts/2023-04-16-INMEDIA-港超聯-流浪贏港會-林衍廷首奪最佳球員-用表現爭取入選港隊.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20230416fg.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>港超聯周日上演尾「四哥」大戰，標準流浪作客跑馬地以2:1擊敗港會，今場助攻助守的林衍廷成為最佳球員，亦是他首次奪得該個獎項。林衍廷指自己早前「犯咗好多事」，已明白每事均並非必然，期望能繼續爭取好表現，獲得港隊主教練安達臣的垂青。</p>
+<img src="https://www.inmediahk.net/files/column_images/20230416fg.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>港超聯周日上演「四哥」大戰，標準流浪作客跑馬地以2:1擊敗港會，今場助攻助守的林衍廷成為最佳球員，亦是他首次奪得該個獎項。林衍廷指自己早前「犯咗好多事」，已明白每事均並非必然，期望能繼續爭取好表現，獲得港隊主教練安達臣的垂青。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1u6M0L1Pu4" title="DSC_1170"><img src="https://live.staticflickr.com/65535/52821324871_2e8bfe77a6_b.jpg" width="1024" alt="DSC_1170" /></a></p>
 <p>港會在「地獄主場」出戰，菲杜化、杜國樑坐鎮後防，羅賓士高、泰亞高在前線攻堅，保連奴在訓練時受傷，由基奧頂上。標準流浪今場強陣出戰，正選未有U22球員，由「09」梁興傑把守最後一關，外援朴鍾範、金旻奎、伊巴謙、神田夢實及祖連奴悉數正選上陣。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7x189L0629" title="DSC_1211"><img src="https://live.staticflickr.com/65535/52821506089_1e84b03391_b.jpg" width="1024" alt="DSC_1211" /></a></p>
