--- a/_posts/2023-04-16-INMEDIA-給十九歲的我-奪最佳電影-導演郭偉倫-唔好驚-時代需要拍紀錄片.html
+++ b/_posts/2023-04-16-INMEDIA-給十九歲的我-奪最佳電影-導演郭偉倫-唔好驚-時代需要拍紀錄片.html
@@ -23,6 +23,6 @@ author: 獨媒報導
 <p><strong>郭偉倫：唔好驚，拍咗先算</strong></p>
 <p>郭偉倫最後就表示，感謝英華女校信任、後期公司和各無名英雄，包括十年來幫忙抄錄音謄本的英華女校同學，並表示：「最後我個人想講一句，就係香港拍紀錄片嘅導演，請你繼續努力去拍紀錄片。唔好驚，因為時代需要拍紀錄片，用鏡頭記錄我哋發生嘅事。記住唔好熄機，繼續拍，唔好驚，拍咗先算，剪咗先算，上咗先算。」</p>
 <p>《給十九歲的我》由張婉婷和郭偉倫聯合執，記錄了6名英華女學校學生的十年成長，但在公映後有片中主角稱並未同意公映，引起軒然大波，影片在2月6日已暫停公映。《給十九歲的我》在今屆金像獎中獲得三項提名，包括最佳電影、最佳導演及最佳剪接。英華女校曾申請退選「最佳電影」提名，但金像獎主席爾冬陞曾表示，經過董事局討論及聽取業內人士、律師意見後，大家一致認為無權褫奪任何提名資格。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Y29AC9J8H4" title="VideoScreenshot--ViuTV-190’05”"><img src="https://live.staticflickr.com/65535/52821899111_bbce0f9630_z.jpg" alt="VideoScreenshot--ViuTV-190’05”" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Y29AC9J8H4" title="VideoScreenshot--ViuTV-190’05”"><img src="https://live.staticflickr.com/65535/52821899111_bbce0f9630_z.jpg" alt="VideoScreenshot--ViuTV-190’05”" /></a><br /><em>ViuTV 截圖</em></p>
 <p>在頒獎禮上，金像獎大會亦未有播放《給十九歲的我》提名片段，只以相片代替。至於6名主角中，倫凱頤（阿雀）和羅曉淳（Madam）2人均有出席頒獎禮，但未有上台，在導演致謝時反應平靜。</p>
 </div></div></div>
