--- a/_posts/2023-04-16-PQ-法國經濟逃不掉對中依賴-跪拜天朝眾人嫌.html
+++ b/_posts/2023-04-16-PQ-法國經濟逃不掉對中依賴-跪拜天朝眾人嫌.html
@@ -20,7 +20,7 @@ author: 謝時
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333.jpg" alt="" class="wp-image-133399" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333.jpg 787w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333-768x512.jpg 768w" sizes="(max-width: 787px) 100vw, 787px" /><figcaption>法國總統馬克宏連三天訪中行程，更加深法中兩國的經貿依賴。習近平甚至表示他們兩人是知己一般的「親密夥伴」<br>圖／Twitter</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333.jpg" alt="" class="wp-image-133399" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333.jpg 787w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/d9616200-p01-230412-333-768x512.jpg 768w" sizes="(max-width: 787px) 100vw, 787px" /><figcaption>法國總統馬克宏連三天訪中行程，更加深法中兩國的經貿依賴。習近平甚至表示他們兩人是知己一般的「親密夥伴」<br>圖／Twitter</figcaption></figure></div>
 
 
 
