--- a/_posts/2023-04-16-PQ-備戰才能避戰-面臨戰爭威脅無法避談的-全民防衛動員法.html
+++ b/_posts/2023-04-16-PQ-備戰才能避戰-面臨戰爭威脅無法避談的-全民防衛動員法.html
@@ -144,7 +144,7 @@ author: 林奕辰
 
 
 
-<p>謝良駿表示，值得注意的是，這三部中華民國法律通過時，台灣還是大日本帝國的領土。且當時的中華民國政府仍處於「訓政時期」，由國民黨一黨專政、自行制定法律，<strong>以現代憲政角度來看，這三部法律僅是「行政命令」，缺乏國會賦予的民主正當性，也不符合權力分立原則</strong>。此外，《中華民國憲法》直到 1947 年（民國 36 年）才正式施行，這三部法律制定在憲法公布之前，是否具備憲法規範之人權保障思想，存在疑慮。</p>
+<p>謝良駿表示，值得注意的是，這三部中華民國法律通過時，台灣還是大日本帝國的領土。且當時的中華民國政府仍處於「訓政時期」，由國民黨一黨專政、自行制定法律，<strong>以現代憲政角度來看，這三部法律本質上僅是「行政命令」，缺乏國會賦予的民主正當性，也不符合權力分立原則</strong>。此外，《中華民國憲法》直到 1947 年（民國 36 年）才正式施行，這三部法律制定在憲法公布之前，是否具備憲法規範之人權保障思想，存在疑慮。</p>
 
 
 
@@ -164,7 +164,7 @@ author: 林奕辰
 
 
 
-<p>謝良駿表示，政府要限制人民的權利，理應經由國會同意，進行法律授權。然而，現在的《全民防衛動員準備法》卻違反「法律保留原則」，例如現行法第 14 條，NCC 身為行政主管機關，卻可以自行制定辦法管制大眾傳播事業。這是過去遺留下來的行政規定，顯然不夠完善，有修正之必要。</p>
+<p>謝良駿表示，政府要限制人民的權利，理應經由國會同意，進行法律授權。然而，現在的《全民防衛動員準備法》卻違反「法律保留原則」，例如現行法第 14 條，NCC 身為行政主管機關，卻可以自行制定辦法管制大眾傳播事業。這是過去遺留下來過於空泛的空白授權，顯然不夠完善，有修正之必要。</p>
 
 
 
@@ -176,23 +176,23 @@ author: 林奕辰
 
 
 
-<p>謝良駿指出，此次修正草案更改名字，將「準備」拿掉，改為《全民防衛動員法》，還增訂了「動員實施階段專章」，就是為了改善現行法只重視「準備」不重視「實施」的問題。草案也嚴格規範國家若要對人民基本權利進行干預，需要獲得立法機關的同意，不像現行法，在媒體管制及交通管制部分都直接交由行政機關規範。同時，草案也加強了「補償」相關規定，國家進行物力、人力的徵用後，需要對人民進行補償。</p>
+<p>謝良駿指出，此次修正草案更改名字，將「準備」拿掉，改為《全民防衛動員法》，還增訂了「動員實施階段組織與權責」之專章，就是為了改善現行法只重視「準備」不重視「實施」的問題。草案也嚴格規範國家若要對人民基本權利進行干預，需要直接規定於法律之中並獲得立法機關的同意，不像現行法，在媒體管制及交通管制部分都直接交由行政機關自行訂定規範。同時，草案也加強了「補償」相關規定，國家進行物力、人力的徵用後，需要對人民進行補償。</p>
 
 
 
-<p>謝良駿說，違反「動員實施」相關規定必須有罰則，否則將無法維持戰時社會秩序，草案也將加強此部分，修法讓特定犯罪（如哄抬物價、散布謠言、妨礙人力物力徵用等）加重二分之一刑罰，公務人員進行洩密也須面臨刑事責任。綜觀修正草案，其實多能在《傳染病防治法》中找到類似規定，並沒有太大侵害人權的疑慮。不過尚有改進之處，有幾個地方可以更好。</p>
+<p>謝良駿說，違反「動員實施」相關規定必須有罰則，否則將無法維持戰時社會秩序，草案也將加強此部分，例如第 59 條至第 61 條分別規定關於哄抬物價、散佈謠言罪、妨害人力物力徵用罪等；第 62 條則修法讓特定犯罪（如犯竊盜、詐欺、侵占等）加重二分之一刑罰，第 63 條規定則進一步規定公務人員進行洩密也須面臨刑事責任。綜觀修正草案之上開規定，其實多能在《傳染病防治法》中找到類似規定，並沒有太大侵害人權的疑慮。不過尚有改進之處，有幾個地方可以更好。</p>
 
 
 
-<p>謝良駿建議，未來戰時應如何實施徵用物資，草案設計由國防部發布命令，與行政院和地方政府進行分工。但把人民的東西徵來給國家用，應該明確寫進法律，而非用行政命令方式，以貫徹法律保留原則。</p>
+<p>謝良駿建議，未來戰時應如何實施徵用物資，現行法設計由國防部發布命令，與行政院和地方政府進行分工。但國家徵用人民的東西，是國家公權力對人民權利的限制，應該明確寫進法律，而非用行政命令方式，以貫徹法律保留原則。</p>
 
 
 
-<p>此外，草案對於補償請求的時效只有兩年，規定已經落伍，不合時宜。依照現在的相關規定，應該至少是 10 年，甚至 15 年都不是問題，而時效起算的時間點，應該將主觀和客觀因素納入一起考量，只考量客觀因素並不符合憲法上的要求。非常時期採取非常手段可以理解，但回復正常時期後應該規定救濟方式、給予人民上訴機會，然而現行草案目前看不到相關機制，應從人權的觀點再全盤檢討。</p>
+<p>此外，草案對於補償請求的時效只有兩年，規定已經落伍，不合時宜。依照現在行政程序法第 131 條第 1 項的相關規定，應該至少是 10 年；人民在非常時期為國家犧牲個人的財產或自由而成就國家或公共利益，在評價上更應該予以肯定，若這樣看來，甚至將消滅時效的時間規定為 15 年都不是問題，而時效起算的時間點，應該將主觀和客觀因素納入一起考量，只考量客觀因素並不符合憲法上的要求。非常時期採取非常手段可以理解，但回復正常時期後應該規定救濟方式、給予人民上訴機會，然而現行草案目前看不到相關機制，應從人權的觀點再全盤檢討。</p>
 
 
 
-<p>林紀東在 1958 年發表的〈非常時期法制引論〉中曾提到，「學法律的人，絕對不能昧於時勢，故步自封，只孜孜於平時法制的研究，應該想到法律是社會生活的工具」。謝良駿認為，林紀東前輩在 60 年前就有如此先見之明，現階段台灣更應該重視「非常時期法制」的檢討及批判，盡速修正《全民防衛動員準備法》，將草案不足的地方改善，以明確限制國家公權力的行使。</p>
+<p>學者林紀東教授在 1958 年發表的〈非常時期法制引論〉中曾提到，「學法律的人，絕對不能昧於時勢，故步自封，只孜孜於平時法制的研究，應該想到法律是社會生活的工具，應該為國家社會而用，國而不存，法律之何有？」。謝良駿認為，林紀東前輩在 60 年前就有如此先見之明，現階段台灣更應該重視「非常時期法制」的檢討及批判，盡速修正《全民防衛動員準備法》，將草案不足的地方改善，以明確限制國家公權力的行使，避免重蹈過去威權時代的覆轍。</p>
 
 
 
