--- a/_posts/2023-04-18-PQ-台灣有事就是全世界有事-博多黑-法國支持維持現狀-反對封鎖.html
+++ b/_posts/2023-04-18-PQ-台灣有事就是全世界有事-博多黑-法國支持維持現狀-反對封鎖.html
@@ -16,7 +16,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-1024x683.jpg" alt="" class="wp-image-133616" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>法國國民議會友台小組主席博多黑率小組成員訪台，強調法國政府的立場就是維持現狀，法國對台灣的政策沒有改變／圖：總統府提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-1024x683.jpg" alt="" class="wp-image-133616" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c2d5baf9-1920886.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>法國國民議會友台小組主席博多黑率小組成員訪台，強調法國政府的立場就是維持現狀，法國對台灣的政策沒有改變／圖：總統府提供。</figcaption></figure></div>
 
 
 
