--- a/_posts/2023-04-18-INMEDIA-美國起訴兩華裔居民-涉助中國建秘密警察站-中方-捏造罪名.html
+++ b/_posts/2023-04-18-INMEDIA-美國起訴兩華裔居民-涉助中國建秘密警察站-中方-捏造罪名.html
@@ -14,7 +14,7 @@ author: 獨媒報導
 <p>兩名被告分別為盧建旺及陳金平，各人被起訴一項「串謀擔任中國政府代理人」及一項妨礙司法公正罪，罪成最高可分別判囚5年及20年。據當地報導，兩人昨日提堂後，獲准以25萬和40萬美元保釋。保釋條件亦包括不得在中國領事館或使團方圓800公尺範圍內出現，亦不得與案中同謀交流，兩人同意條件。</p>
 <p>法庭公開文件，詳述公安局和統戰部工作，FBI調查員指公安部除是中國國內執法機關和國家安全部門，更負責海外情報收集工作。公安部還慣常監察居於美國，或其他國家的中國異見人士，利用世界各地不同的連繫，去影響、恐嚇、脅迫海外異見人士，藉此令他們噤聲。</p>
 <p><strong>涉組織反示威活動、恐嚇海外異見者</strong></p>
-<p>FBI指，盧建旺與中國政府有長久關係，他親自向探員承認2015年在中國國家主席習近平訪美期間，與其他在美華人團體組織，每個組織最少派15人員去參與反法輪功示威。盧建旺之後獲公安部頒發牌牌匾嘉許。</p>
+<p>FBI指，盧建旺與中國政府有長久關係，他親自向探員承認2015年在中國國家主席習近平訪美期間，與其他在美華人團體組織，每個組織最少派15人員去參與反法輪功示威。盧建旺之後獲公安部頒發牌匾嘉許。</p>
 <p>此外，盧建旺亦曾在2018年協助保安局，尋找一名被中國列入出境黑名單的人士，該人被指在國內欺詐，並用非法手段用綠卡潛逃美國，並要求盧建旺看看有沒有方法將他「押解」回到中國。</p>
 <p>FBI向該名人士調查，確認多次被自稱「中國商會」的人騷擾，並要求他返回中國。騷擾的方式包括多次不明來電，威脅使用暴力，又聲言會對其中國家人使用暴力。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/iFk1g105p2" title="螢幕截圖 2023-04-18 下午1.55.38"><img src="https://live.staticflickr.com/65535/52826914268_cf6406ab63_b.jpg" width="1011" alt="螢幕截圖 2023-04-18 下午1.55.38" /></a><br /><em>被告盧建旺（影片截圖）</em></p>
