--- a/_posts/2023-04-18-INITIUM-北京长峰医院火灾已致29人死亡-去世住院患者平均年龄71岁-whatsnew.html
+++ b/_posts/2023-04-18-INITIUM-北京长峰医院火灾已致29人死亡-去世住院患者平均年龄71岁-whatsnew.html
@@ -34,7 +34,7 @@ author: 端传媒中國組
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230419-mainland-beijing-hospital-fire-accident/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/705b8e75d9874d928f1ae25d7a05c495.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年4月18日13时左右，位于北京市丰台区的北京长峰医院住院部东楼发生火情，网上影片所见，有医院内的人疑似跳出窗外求生。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2023年4月18日13时左右，位于北京市丰台区的北京长峰医院住院部东楼发生火情，网上影片所见，有医院内的人疑似跳出窗外求生。<span class="credit">影片截图</span></figcaption></figure>
 
-<p>发生火灾的住院部东楼一共六层，东楼中间楼层外墙体有明显过火痕迹，一二楼从外部看完好无损。烧毁程度较为严重的窗户集中在四层和五层，顶楼六楼中间部分有少量窗户外表已经烧黑，墙外电梯顶部已经彻底烧毁，其两侧四到六层的窗户也被明显烧黑。从外部看，火情严重的区域集中在三四五层的中间部分，在四楼中间的一个横窗上还悬挂着一条逃生的床单。</p>
+<p>发生火灾的住院部东楼中间楼层外墙体有明显过火痕迹，一二楼从外部看完好无损。烧毁程度较为严重的窗户集中在大楼的中间楼层，顶楼中间部分有少量窗户外表已经烧黑，墙外电梯顶部已经彻底烧毁，其两侧楼层窗户也被明显烧黑。从外部看，火情严重的区域集中在整栋大楼的中间部分，其中一个窗户外还悬挂着一条逃生的床单。</p>
 <p>记者从院外观察到的住院部东楼窗户均为竖式窄窗，窗户只能开到一半位置。网上流传视频中的楼体为内侧配楼，从建筑外观看建筑年代较长。另一侧住院部西楼正常运作中，医院也未见停诊迹象，发热门诊仍在开放，院内不时有车辆出。晚11点半，警察仍在医院附近驻守。</p>
 <p>财新报道，长峰医院医护人员称，伤者主要被转移至301、307、721、右安门、玉泉医院。部分患者在火灾后被转到住院部西楼4层病房，东楼和西楼中间有连廊。</p>
 <p>美国有线电视新闻网（CNN）在报道中指出，这次大火是近年来死亡人数最多的火灾之一，此前在2017年北京南面大兴区一栋两层楼发生火灾，有19人丧生。那场火灾促使北京市政府拆除了火灾发生地周边大量被认为是非法或不安全的房屋，并迫使成千上万的外地打工者搬迁。</p>
