Update VOCUS 2023-04-20 patch

--- a/_posts/2023-04-17-VOCUS-樹懶泰太-如果時間是一種貨幣-那我是貧窮還是富有.html
+++ b/_posts/2023-04-17-VOCUS-樹懶泰太-如果時間是一種貨幣-那我是貧窮還是富有.html
@@ -8,7 +8,6 @@ tags: blog
 author: 泰太
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">如果<span style="font-weight: bold; ">時間是一種貨幣，那媽媽肯定是最貧窮的那一群。</span></div>
 <div class="draft-block draft--p left">要一個人獨處好難，連上個廁所都要黏上來抱抱，更別說要隨時處理一堆屎尿，還要同時間處理滿山的家務事，媽媽的獨處時間少得可憐，只能在小孩入睡後的夜深人靜裡享用一下Me Time，前提還必須是沒累到跟著一起睡著才能享用。</div>
 <div class="draft-block draft--p left">怪不得人說，<span style="text-decoration: underline; ">熬夜對媽媽來說敖的不是夜，是自由</span>！以前的我也真切地感同身受，但隨著小孩來到三歲半的年紀，能拿到的時間貨幣也逐漸增多了。</div>
@@ -27,9 +26,7 @@ author: 泰太
 <div class="draft-block draft--p left">以前覺得媽媽是最貧窮的那一群，那是我站在<span style="text-decoration: underline; ">獨處時間</span>的角度來看，但若換成和<span style="text-decoration: underline; ">小孩相處的時間</span>，哇賽，馬上富有了起來，簡直大富翁！我和孩子有大把大把的時間可以相處呢！</div>
 <div class="draft-block draft--p left">吃了半小時的西瓜，再用了半小時收拾，我們盡情揮灑了一小時的時間，反正外面的霧霾不適合去公園跑跳，反正街上潑水的人們很瘋狂，反正我們擁有很多時間。有在趕什麼嗎？沒有呀！那就慢~~慢~~來~~~（樹懶式的揮灑時間~~~</div>
 <div class="draft-block draft--p left">對於<a href="https://vocus.cc/user/@wyj_e" target="_blank" class="draft--a">油雞小姐</a>所提的〈接受現狀〉與〈換框思考〉，瞬間再度心領神會，生活中處處是練習的機會。轉念一想後，真心覺得自己超極富有，連和小犬兒一起收拾廚房都變得有趣好玩了。樹懶泰太搖身一變成育兒大富翁！</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Aeij-oc-18s&amp;ab_channel=KinoCheckArchive"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Aeij-oc-18s"></iframe></div>
 <h2 class="draft-block draft--h2" name="header-9s028">泰太想說...</h2>
 <div class="draft-block draft--p left">近日因為<a href="https://vocus.cc/user/@gnikis" target="_blank" class="draft--a">gnikis</a>在討論區的<a href="https://vocus.cc/post/643a26ccfd897800016aad12" target="_blank" class="draft--a">搭訕式分享</a>，瞬間增加好幾十人追蹤，在泰國新年的潑水節假期中，是份驚喜的新年禮物。<span style="font-weight: bold; ">真心非常感謝每一個你</span>🙏<span style="font-weight: bold; ">。</span></div>
 <div class="draft-block draft--p left">不知道各位是否會有期待？誠如先前在<a href="https://vocus.cc/article/63b43d8cfd89780001f3050f" target="_blank" class="draft--a">公告文章</a>所提的，將2023年的封號賜為本質年，回想一開始的初衷與單純，就只是想寫想說而已。在安靜了三個月後，索開啟的新專題【樹洞沒有嘴巴】，顧名思義就是把它當樹洞，吼吼哇哇啦啦的放洩的一下。</div>
@@ -37,12 +34,10 @@ author: 泰太
 <div class="draft-block draft--p left">所以，這裡沒有專業的知識分享，不會教你熱門的投資理財，也沒有其它的收納整理、食譜料理、藝術文學、人類圖...等，沒有要幫你的生活過得更好更上一層樓的使命。</div>
 <blockquote class="draft-block draft--blockquote">「啊，訂閱購買這個專題，好像什麼都沒有，但樹懶泰太會超開心！」</blockquote>
 <div class="draft-block draft--p left">【噓！Don't talk 】</div>
-<div><h3><a href="https://vocus.cc/donttalk/introduce">樹洞沒有嘴巴 - 專題介紹｜方格子 vocus</a></h3><span>《國王長著驢耳朵》的故事，記得兒是第一次讀時就印象深刻，長大後再讀更有著不一樣的感受。人們總常說，想找一個樹洞發洩，把那些不能說的、不敢說的、或是不可以讓人知道的秘密，都對著樹洞發洩出來。「你以為樹洞真的沒有嘴巴，不會把事情說出去嗎？」但，會又怎樣，不會又怎麼樣呢？歡迎光臨泰太的樹洞，一起跳入黑暗吧！ - 專題介紹｜方格子 vocus</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimages.vocus.cc%2Fa75d3c8c-a1e3-4ebc-bf3c-991e7ec78de4.jpeg&amp;width=550&amp;sign=lQKi3f039OB5-vM3_sYTIi6TjEvutGag2L-EDwL7G2c"></div>
-<div class="draft-block draft--p left"></div>
+<div><h3><a href="https://vocus.cc/donttalk/introduce">樹洞沒有嘴巴 - 專題介紹｜方格子 vocus</a></h3><span>《國王長著驢耳朵》的故事，記得兒是第一次讀時就印象深刻，長大後再讀更有著不一樣的感受。人們總常說，想找一個樹洞發洩，把那些不能說的、不敢說的、或是不可以讓人知道的秘密，都對著樹洞發洩出來。「你以為樹洞真的沒有嘴巴，不會把事情說出去嗎？」但，會又怎樣，不會又怎麼樣呢？歡迎光臨泰太的樹洞，一起跳入黑暗吧！ - 專題介紹｜方格子 vocus</span><img src="https://images.vocus.cc/a75d3c8c-a1e3-4ebc-bf3c-991e7ec78de4.jpeg"></div>
 <h2 class="draft-block draft--h2" name="header-6l7jn">公告通知</h2>
 <div class="draft-block draft--p left">專題【泰太有事嗎】裡的文章，正在慢速移動至<a href="https://imthaitai.com/" target="_blank" class="draft--a"><span style="font-weight: bold; ">泰太的網站</span></a>裡，網站也在建構中，有空請來我家裡坐坐，也歡迎給予建議。</div>
 <div class="draft-block draft--p left">為什麼要建立自己的網站呢？<br>花錢買網域又要花時間來架構，我到底要做什麼呢？</div>
 <div class="draft-block draft--p left">在過程中有時會問著自己，啊，就看著<a href="https://www.youtube.com/channel/UC36pBrNJXWAklDYnqCZaLmQ" target="_blank" class="draft--a">〈網站帶路姬〉</a>，看著看著一時心熱就買網域了，頭都洗了就洗完吧！雖然花錢又花時間，但建立起來後，成就感滿滿耶，說穿了，最終答案就是一個<span style="font-weight: bold; ">爽</span>。</div>
 <div class="draft-block draft--p left">讓自己開心蠻重要的，這樣才能長長久久，道理很簡單，但體悟不簡單。</div>
 <pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block"><a href="https://imthaitai.com/" target="_blank" class="draft--a">imthaitai.com (點我進入 </a></pre></pre>
-<div class="draft-block draft--p left"></div>
