--- a/_posts/2023-04-19-VOCUS-琉璃的寶石-藏在石頭裡的閃爍.html
+++ b/_posts/2023-04-19-VOCUS-琉璃的寶石-藏在石頭裡的閃爍.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/c8232f39-a1c0-4910-90d9-0363cf600627.jpg" data-width="1200" data-height="630" data-position="center" src="https://images.vocus.cc/c8232f39-a1c0-4910-90d9-0363cf600627.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">不過如果對於閱讀科普或教育類有點困難，只想休閒的讀者來說。《琉璃的寶石》一書其實不算很輕切，因為裡面的圖畫決大部分都是圖表、石頭、研究圖，雖然偶爾的讀者服務但如同隔靴搔癢。如果不喜歡閱讀大量文字的話，或對於寶石完全沒有興趣，《琉璃的寶石》這本書就不是太合適，因為我認為它本身就是以科普教育為出發點包裝的漫畫作品。</div>
 <div class="draft-block draft--p left">漫畫作者澀谷圭一郎，本身過去就是主修礦物學，所以對於《琉璃的寶石》裡頭礦物的科普都非常儼僅且有條理，就連如何使用研究中的顯微鏡和圖表製作，到漫畫常常出現的掏金盆挖寶工具，都有詳細的使用說明，並且還追加地理知識，可以說這是一本披著女高中生騙人研究石頭坑的入們漫畫作。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/_m4oGSthRc8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/_m4oGSthRc8"></iframe></div>
