--- a/_posts/2023-04-19-INMEDIA-初選47人案-趙家賢指絕對不視戴耀廷為親密朋友-一度認戴如-麻煩製造者-對他感不滿.html
+++ b/_posts/2023-04-19-INMEDIA-初選47人案-趙家賢指絕對不視戴耀廷為親密朋友-一度認戴如-麻煩製造者-對他感不滿.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p>此外，趙家賢指何桂藍2018年在九西和新東補選初選後曾以《立場新聞》記者身分邀約他受訪，惟因趙感覺何「唔係好支持個初選」，故向《立場》反映望換人，終由另一記者訪問。</p>
 <p><strong>趙稱何桂藍2018年曾以《立場》記者身分就初選約訪 惟趙提出換人</strong></p>
 <p>趙家賢今開始接受代表何桂藍的大律師 Trevor Beel 盤問。趙家賢同意，他個人並不認識何桂藍。被問是否從沒有與她談話，趙指在2018年頭，民主派九龍西和新界東補選初選完結後，何桂藍曾以《立場新聞》記者身分在某個集會「嚟搵我講咗幾句」，想就初選與他進行訪問。</p>
-<p>惟趙指，當時何予他的感覺「其實唔係好支持個初選」，故他與《立場》另一名資深記者反映「如果你哋想訪問我，可唔可以派另一個記者嚟」，林卓廷、鄒家成、余慧明等發笑。趙續指，故當時與何「傾咗幾下後就冇接觸」，《立場》亦派了另一個記者與他做訪問，此外便不曾與何有接觸和對話。</p>
+<p>惟趙指，當時何予他的感覺「其實唔係好支持個初選」，故他與《立場》另一名資深記者反映「如果你哋想訪問我，可唔可以派另一個記者嚟」，林卓廷、鄒家成、余慧明等發笑，何桂藍則沒有特別反應，繼續使用電腦。趙續指，故當時與何「傾咗幾下後就冇接觸」，《立場》亦派了另一個記者與他做訪問，此外便不曾與何有接觸和對話。</p>
 <p><strong>趙指絕對不會視戴耀廷為親密朋友、戴令其工作變得困難</strong></p>
 <p>Beel 續就戴耀廷發問。趙同意，他於2012年開始認識戴耀廷。Beel 問他會如何形容與戴自2016年至2019年的關係，趙答「好複雜」。在延伸庭的黃之鋒、吳敏兒及袁嘉蔚均發笑。Beel 問，會否視戴為親密朋友（close friend）？趙指「絕對不會」。吳敏兒及袁嘉蔚聞後再發笑。Beel 再問，趙尊重戴嗎？法官李運騰問是作為人、學者抑或領袖？陳慶偉提議是作為政治人物，Beel 則指是作為政治思想家（political thinker）。趙未有直接回答，僅稱「（戴耀廷）諗好多嘢出嚟，係令到我當時嘅工作好困擾」，施德來、陳志全、鄒家成等發笑；吳敏兒及袁嘉蔚則笑得掩嘴。</p>
 <p><img src="https://live.staticflickr.com/65535/52759037720_e35dfcc638_b.jpg" /><br /><em>代表何桂藍的大律師 Trevor Beel（資料圖片）</em></p>
