--- a/_posts/2023-04-19-INITIUM-早报-美国最高法院推迟两天裁决是否限制口服堕胎药米非司酮.html
+++ b/_posts/2023-04-19-INITIUM-早报-美国最高法院推迟两天裁决是否限制口服堕胎药米非司酮.html
@@ -16,9 +16,9 @@ author:
 <p>就这两份互相矛盾的裁决，位于新奥尔良的<a href="https://www.bbc.com/news/world-us-canada-65320035">第五巡回上诉法院4月12日裁定</a>，暂停德州的部分裁决，但不取消所有限制措施，包括孕妇必须亲自见医生才能获得此药。</p>
 <p>拜登政府又向最高法院上诉。最高法院目前由6名“保守派”大法官和3名“自由派”大法官组成，去年曾以5比4推翻保障女性堕胎权的罗诉韦德案（Roe v. Wade）。</p>
 <p>另外，无论最高法院周五如何判决，此案都意味着FDA在药品安全问题上的权威将被削弱。</p>
-<h3>美国佛州限制所有公立中小学讲授性教育</h3>
-<p><a href="https://www.reuters.com/world/us/florida-education-board-vote-extending-ban-gender-identity-lessons-2023-04-19/">美国佛罗里达州教育委员会周三投票决定</a>，限制所有公立学校讲授关于性教育、性取向、性别认同的内容，从而对共和党州长德桑蒂斯（Ron DeSantis）去年签署生效的《父母教育权利法》（ Parental Rights in Education Bill ）扩大适用范围。</p>
-<p>该法也被讽刺为“不准称同志法”（Don’t Say Gay），规定幼儿园至公立小学三年级的教师不得讲授性教育、性取向、性别认同内容，违者将被停职或取消教师资格。</p>
+<h3>美国佛州限制所有公立中小学讲授性别教育</h3>
+<p><a href="https://www.reuters.com/world/us/florida-education-board-vote-extending-ban-gender-identity-lessons-2023-04-19/">美国佛罗里达州教育委员会周三投票决定</a>，限制所有公立学校讲授有关性取向、性别认同的内容，从而对共和党州长德桑蒂斯（Ron DeSantis）去年签署生效的《父母教育权利法》（ Parental Rights in Education Bill ）扩大适用范围。</p>
+<p>该法也被讽刺为“不准称同志法”（Don’t Say Gay），规定幼儿园至公立小学三年级的教师不得讲授有关性取向、性别认同的内容，违者将被停职或取消教师资格。</p>
 <p>由德桑蒂斯任命的州教育委员会成员一致同意，公立学校四至十二年级的教师也不得讲授这些内容，除非课程是按照该州标准要求；或者是健康课的一部分，但家长有权让孩子不参加这部分课程。</p>
 <h3>美国众议院共和党同意提高债务上限，但要削减开支</h3>
 <p>美国众议院共和党议长<a href="https://www.reuters.com/world/us/republican-mccarthy-unveil-plan-lift-us-debt-ceiling-by-15-trln-source-2023-04-19/">麦卡锡（Kevin McCarthy）周三公布一项法案</a>，同意将国家债务上限提高到明年，但要求大幅削减联邦支出，包括取消拜登政府近期多项立法成就。预计民主党人不会同意，两党将为此展开争论。</p>
