--- a/_posts/2023-04-20-PQ-侯友宜拿公費匆忙訪新加坡-行程預算與招標過程市府一問三不知.html
+++ b/_posts/2023-04-20-PQ-侯友宜拿公費匆忙訪新加坡-行程預算與招標過程市府一問三不知.html
@@ -16,7 +16,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）.jpeg" alt="" class="wp-image-133860" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）-300x207.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）-768x530.jpeg 768w" sizes="(max-width: 684px) 100vw, 684px" /><figcaption>民進黨發言人張志豪（右起）、新北市議員陳乃瑜、戴瑋姍、顏蔚慈等人，於18日召開記者會，質疑新北市長侯友宜選在19日出訪新加坡，是為了逃避近期羅友志爆料500萬元搓圓仔一事。（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）.jpeg" alt="" class="wp-image-133860" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）-300x207.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/40f0e66e-（圖／中央社）-768x530.jpeg 768w" sizes="(max-width: 684px) 100vw, 684px" /><figcaption>民進黨發言人張志豪（右起）、新北市議員陳乃瑜、戴瑋姍、顏蔚慈等人，於18日召開記者會，質疑新北市長侯友宜選在19日出訪新加坡，是為了逃避近期羅友志爆料500萬元搓圓仔一事。（圖／中央社）</figcaption></figure></div>
 
 
 
