--- a/_posts/2023-04-20-PQ-劉以正-反戰不能只取悅入侵者-加強軍事傷亡更少.html
+++ b/_posts/2023-04-20-PQ-劉以正-反戰不能只取悅入侵者-加強軍事傷亡更少.html
@@ -24,7 +24,7 @@ author: 劉以正
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-1024x610.png" alt="" class="wp-image-133871" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-1024x610.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-300x179.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-768x457.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-1536x915.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image.png 1600w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>圖為烏克蘭的國土防衛部隊進行訓練。來源：烏克蘭國防部</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-1024x610.png" alt="" class="wp-image-133871" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-1024x610.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-300x179.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-768x457.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image-1536x915.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c56332da-image.png 1600w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>圖為烏克蘭的國土防衛部隊進行訓練。來源：烏克蘭國防部</figcaption></figure>
 
 
 
