--- a/_posts/2023-04-20-PQ-劉以正-反戰不能只取悅入侵者-加強軍事傷亡更少.html
+++ b/_posts/2023-04-20-PQ-劉以正-反戰不能只取悅入侵者-加強軍事傷亡更少.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[劉以正]反戰不能只取悅入侵者 加強軍事傷亡更少"
+title: "【劉以正】反戰不能只取悅入侵者 加強軍事傷亡更少"
 date: 2023-04-20 15:44:58.000000000 +00:00
 link: https://pourquoi.tw/military-capability-reduce-casualties/?utm_source=rss&utm_medium=rss&utm_campaign=military-capability-reduce-casualties
 categories: pq
@@ -88,4 +88,4 @@ author: 劉以正
 
 
 
-<p>比起近期想要輕率的以綏靖方式得到和平的人，筆者認為民主國家在戰爭中的道德責任並不是舉著反戰之名去取悅可能的侵略者，<strong>我們更應該活用民主國家在軍事上的優點，以開放和透明的政治體制來促進科技創新、以多元的價值和民主制度聯合盟友，同時最大化自己和盟友的作戰能力，在戰場上使用減少傷亡人員數量的軍事策略。以此來真正達成保護所有人生命財產、守護大家日常生活的目的。</strong></p><p>The post <a href="https://pourquoi.tw/military-capability-reduce-casualties/">[劉以正]反戰不能只取悅入侵者 加強軍事傷亡更少</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>比起近期想要輕率的以綏靖方式得到和平的人，筆者認為民主國家在戰爭中的道德責任並不是舉著反戰之名去取悅可能的侵略者，<strong>我們更應該活用民主國家在軍事上的優點，以開放和透明的政治體制來促進科技創新、以多元的價值和民主制度聯合盟友，同時最大化自己和盟友的作戰能力，在戰場上使用減少傷亡人員數量的軍事策略。以此來真正達成保護所有人生命財產、守護大家日常生活的目的。</strong></p><p>The post <a href="https://pourquoi.tw/military-capability-reduce-casualties/">【劉以正】反戰不能只取悅入侵者 加強軍事傷亡更少</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
