--- a/_posts/2023-04-21-INMEDIA-女冰球隊長見證港隊成立打足10年-子女入睡後練波-拉傷食止痛藥照打.html
+++ b/_posts/2023-04-21-INMEDIA-女冰球隊長見證港隊成立打足10年-子女入睡後練波-拉傷食止痛藥照打.html
@@ -20,7 +20,7 @@ author: 獨媒報導
 <p>除此之外，李在其中一場賽事中受傷，需到醫院接受檢查，幸好最終確定沒有骨折，只是肌肉和肌腱有撕裂。她指醫生開了止痛藥後，她亦有上網看如何貼肌內效貼布舒緩痛楚：「都郁到，咪打埋之後嗰兩場。」最後獲得所屬組別第一名，她說十分開心，播國歌前亦沒有很緊張：「贏咗太開心，冇諗其他。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6og307Nv0d" title="340791116_577849424305651_5558500082674650040_n"><img src="https://live.staticflickr.com/65535/52806701925_05d06a35f9_z.jpg" alt="340791116_577849424305651_5558500082674650040_n" /></a><br /><em>月初，香港女子冰球港隊在世界錦標賽所屬組別奪金。（圖由冰協提供）</em></p>
 <p><strong>每周訓練靠私人贊助  政府減資助或影響運動發展</strong></p>
-<p>早前有男子港隊成員接受<a href="https://bit.ly/3o3Xcqt">《獨媒》訪問</a>時表示，自己沒有定期訓練，只有出發比賽前有較多練習機會。李憶述，女子港隊今次出發前，由冰協安排、康文署贊助的練習亦只有三次，其餘練習都由WIHO舉辦。這些訓練多數由私人機構或冰球愛好者贊助，但參加者亦要支付部分費用：「因為香港個冰（場）好貴，萬幾蚊一個鐘。」</p>
+<p>早前有男子港隊成員接受<a href="https://bit.ly/3o3Xcqt">《獨媒》訪問</a>時表示，自己沒有定期訓練，只有出發比賽前有較多練習機會。李憶述，女子港隊今次出發前，由冰協安排、康文署贊助的練習亦只有7次，其餘練習都由WIHO舉辦。這些訓練多數由私人機構或冰球愛好者贊助，但參加者亦要支付部分費用：「因為香港個冰（場）好貴，萬幾蚊一個鐘。」</p>
 <p>比男球員幸運的是，因本港女球員人數較少，所以女生每星期都可以參加訓練。除了冰場上的練習，WIHO在疫情前亦有邀請外國教練來港，與球員一同看錄影片段，研究如何進步。</p>
 <p>李的丈夫曾任冰球女子港隊經理人。他向傳媒表示，<a href="https://www.inmediahk.net/node/體育/冰協主席親自回應事件-指運動員播國歌前都忐忑不安">兩年前向政府反映過訓練場地不足，獲回覆指需要贏取獎牌才會增加資助</a>。儘管今次男、女子港隊都在世錦賽取得成績，若冰協因國歌風波而被削減資助，運動員辛苦得來的成果是不是如同白費？李就認為，減少資助未必影響目前女子冰球員訓練，但就會影響冰球運動未來發展：「我哋平均年齡由34歲跌至24歲，都係因為train到年輕人加入。」 </p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/16PuZN6upz" title="20230416 專訪女子冰球港隊成員 守門員 Keria （攝影：鍾健華）"><img src="https://live.staticflickr.com/65535/52826260434_765eb697c6_z.jpg" alt="20230416 專訪女子冰球港隊成員 守門員 Keria （攝影：鍾健華）" /></a><br /><em>2023年4月16日，有女子冰球員晚上在Mega Ice進行訓練。（攝影：鍾健華）</em></p>
