--- a/_posts/2023-04-21-INMEDIA-盤點-綠在區區-成效-新合約每月可多獲18萬撥款增42.html
+++ b/_posts/2023-04-21-INMEDIA-盤點-綠在區區-成效-新合約每月可多獲18萬撥款增42.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p>政府的回收系統，原依靠路旁的三色桶，惟其成效不佳，民間則有多個自發的「不是垃圾站」出現。2015年，當局以環境及自然保育基金委聘非政府組織，設立17個社區回收中心和兩個流動回收站。2020年「升級」，斥資超過2.5億元在全港18區設立22個以「6」字作招牌的「綠在區區」回收便利點，提供定時定點回收街站及較長時間的服務。22間回收便利點於2021年2月全面投入服務，並於2022年陸續開展第二期合約，在社區再增設10個回收便利點。政府會以合約形式委聘非牟利機構營運，合約期為兩年。</p>
 <p>回收便利點至今推行兩年，究竟成效如何？根據<a href="https://www.legco.gov.hk/yr2023/chinese/fc/fc/w_q/eeb-e-c.pdf">立法會文件</a>，「綠在區區」社區回收網絡（即包括現行11間回收環保站及32間回收便利點）在2021年的回收量達14,400公噸，是2020年3,950公噸的逾三倍。2022年的回收量更達20,300公噸，較2021年增約41%，每項回收物過去5年亦有按年增長。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7q1q0Tg41x" title="螢幕截圖 2023-04-22 上午2.17.59"><img src="https://live.staticflickr.com/65535/52835433673_526b36151e_b.jpg" alt="螢幕截圖 2023-04-22 上午2.17.59" /></a><br /><em>立法會文件截圖：綠在區區社區回收網絡過去5年的收集量（公噸）</em></p>
-<p>至於第一期回收便利點，根據環保署回覆《獨媒》的數字顯示，該22間回收便利點的回收量佔回收網絡整體最多，2021年及2022年的總回收量分別有9,000及10,900公噸，佔整體62.5%及約54%。而每間「綠在區區」兩年的回收量分別達409及495公噸，按年增長約兩成。每項回收物在過去兩年的回收量，按年增長3%至185%。環保署又指，首批22間「綠在區區」在過去兩年的回收量均能達到合約定明的目標。</p>
+<p>至於第一期回收便利點，根據環保署回覆《獨媒》的數字顯示，該22間回收便利點的回收量佔回收網絡整體最多，2021年及2022年的總回收量分別有9,000及10,900公噸，佔整體62.5%及約54%。而每間「綠在區區」兩年的回收量分別達409及495公噸，按年增長約兩成。每項回收物在過去兩年的回收量，按年增長3%至185%。環保署又指，首批22間「綠在區區」在過去兩年的回收量均能達到合約訂明的目標。</p>
 <p><strong>料2022至23年度開支達1.86億 每間回收便利點新合約可多獲18萬元撥款 </strong></p>
 <p>同時間，「綠在區區」社區回收網絡每年開支都有上升。根據立法會文件，社區回收網絡在2020至21年度的開支達1.62億元，較2021至19年度的3,100萬增逾五倍。2021至22年度更達2.26億元，較去年度增逾1倍。當中回收便利點的開支佔最多，當中2020年至21年度涉1.1億營運開支，並按年度增至1.74億元。政府預計2022至23年度的營運開支達1.86億元。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/f73a4204u2" title="螢幕截圖 2023-04-22 上午2.17.36"><img src="https://live.staticflickr.com/65535/52834414467_a7e693c63a_b.jpg" width="1024" alt="螢幕截圖 2023-04-22 上午2.17.36" /></a><br /><em>立法會文件截圖：綠在區區社區回收網絡過去5年開支（百萬元）</em></p>
