--- a/_posts/2023-04-22-INMEDIA-35歲新警員擁生物化學博士學位-望日後任職鑑證科.html
+++ b/_posts/2023-04-22-INMEDIA-35歲新警員擁生物化學博士學位-望日後任職鑑證科.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p>馮翊匡表示，考官問他會否考慮由警員做起，稱實驗室的安全管理工作中令他明白，管理層要先清楚基本工作，遂決定從基層學起，先投考警員了解前線工作：「學習同埋吸收咗前線嘅經驗，再投考督察。」他指出，適逢當時任職的實驗室解散，要尋找新工作，遂決定投考警員，認為警察是較穩定的工作。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2Dxu30t5Bo" title="無標題"><img src="https://live.staticflickr.com/65535/52835373402_ee686580b1_b.jpg" width="1024" alt="無標題" /></a><br /><em>馮翊匡</em></p>
 <p><strong>考警察獲親友支持  學習劍術十多年</strong></p>
-<p>《獨媒》問到日後欲任職的部門，馮翊匡稱同曾考慮該問題，「一開始覺得，生物化學系呢個科目同警察工作好似冇乜大關係」，但其刑事調查隊的朋友對他說，日後可加入鑑證科便能學以致用，包括進行指紋及DNA鑑定：「佢話我嗰日背景都做到，我聽完都覺得幾有興趣。」</p>
+<p>《獨媒》問到日後欲任職的部門，馮翊匡稱同曾考慮該問題，「一開始覺得，生物化學系呢個科目同警察工作好似冇乜大關係」，但其刑事調查隊的朋友對他說，日後可加入鑑證科便能學以致用，包括進行指紋及DNA鑑定：「佢話我嗰背景都做到，我聽完都覺得幾有興趣。」</p>
 <p>對於擁有高學歷而出任警員，馮翊匡稱身邊的親友學歷較高，「睇嘢睇得比較清澈啲，冇因為19年反修例，或者『黑暴』而反對警察，比起反對，係支持嘅多。」</p>
 <p>另外，馮翊匡已學習劍術十多年，每年都會到日本練習。馮翊匡表示，其師傅亦希望他可以協助他人，投考警員獲得劍會朋友大力支持：「今日畢業，佢哋都係話阿sir 好型啊，其實真係幾開心。」</p>
 <p><strong>32歲見習督察內部晉升  曾駐守沙田總區重案組</strong></p>
